# travel-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  ROADMAP.md  build.rs  build_travelers_db.surql  config.toml  docker-compose.yml  start_docker_db.bat  start_docker_db.ps1
.github/workflows/: ci.yml  release.yml
config/: config.toml
config/profiles/: dev-cloud.toml  dev-local-docker.toml  dev-local.toml  dev-memory.toml  dev.toml  prod.toml.example  unit-tests.toml
database/: README.md  build_travelers_db.surql
database/migrations/: 001_init.surql  002_add_timestamps.surql  003_define_stats_functions.surql  004_overwrite_traveler_stats_function.surql  005_fix_overwrite_stats_function.surql  006_add_validation_constraints.surql  007_case_insensitive_traveler_names.surql  008_add_traveler_number.surql  009_assert_chat_equality.surql
locales/en-US/: commands.ftl  errors.ftl  format.ftl  help.ftl  labels.ftl  types.ftl
locales/en-US/dialogues/: add_expense.ftl  add_traveler.ftl  pending_commands.ftl
locales/it-IT/: commands.ftl  errors.ftl  format.ftl  help.ftl  labels.ftl  types.ftl
locales/it-IT/dialogues/: add_expense.ftl  add_traveler.ftl  pending_commands.ftl
miniapp/: Cargo.toml  Trunk.toml  index.html
miniapp/src/: api.rs  components.rs  main.rs  style.css  telegram.rs  types.rs
miniapp/src/pages/: balances.rs  dashboard.rs  expenses.rs  mod.rs  settings.rs  transfers.rs  travelers.rs
src/: add_expense_dialogue.rs  balance.rs  chat.rs  command.rs  config.rs  consts.rs  db.rs  debt.rs  error.rs  expense.rs  expense_details.rs  i18n.rs  macros.rs  main.rs  money_wrapper.rs  paid_for.rs  settings.rs  split.rs  tests.rs  transfer.rs  traveler.rs  utils.rs
src/commands/: add_traveler.rs  app.rs  cancel.rs  clear_all.rs  clear_expenses.rs  clear_transfers.rs  clear_travelers.rs  command.rs  command_arg.rs  command_outcome.rs  delete_expense.rs  delete_transfer.rs  delete_traveler.rs  find_expenses.rs  help.rs  help_message.rs  inline_keyboards.rs  list_expenses.rs  list_transfers.rs  list_travelers.rs  mod.rs  set_currency.rs  set_language.rs  show_balance.rs  show_balances.rs  show_expense.rs  show_stats.rs  transfer.rs  unknown_command.rs
src/config/: mod.rs
src/dialogues/: add_expense_dialogue.rs  dialogue.rs  keyboard.rs  mod.rs  storage.rs
src/dialogues/pending_command_dialogue/: add_traveler.rs  clear_all.rs  clear_expenses.rs  clear_transfers.rs  clear_travelers.rs  delete_expense.rs  delete_transfer.rs  delete_traveler.rs  list_expenses.rs  mod.rs  set_currency.rs  set_language.rs  show_expense.rs  transfer.rs
src/errors/: add_expense_error.rs  command_error.rs  mod.rs  name_validation_error.rs
src/http/: mod.rs  routes.rs  session.rs  trip.rs  validate.rs
src/i18n/: args.rs  commands.rs  errors.rs  format.rs  help.rs  labels.rs  mod.rs  terms.rs  to_fluent_datetime.rs  translatable.rs  translate.rs  types.rs
src/i18n/dialogues/: add_expense.rs  add_traveler.rs  clear_all.rs  clear_expenses.rs  clear_transfers.rs  clear_travelers.rs  delete_expense.rs  delete_transfer.rs  delete_traveler.rs  list_expenses.rs  mod.rs  set_currency.rs  set_language.rs  show_expense.rs  transfer.rs
src/keyboard/: callback.rs  confirm.rs  mod.rs  paginated.rs  travelers.rs
src/relationships/: mod.rs  owes.rs  paid_for.rs  split.rs  transferred_to.rs
src/services/: error.rs  expense.rs  mod.rs  settings.rs  transfer.rs  traveler.rs
src/stats/: expense_stats.rs  mod.rs  transfer_stats.rs  traveler_stats.rs
src/tables/: chat.rs  expense.rs  mod.rs  traveler.rs
src/tests/: cross_dialogue.rs  integration_test.rs  integration_tests.rs  mod.rs
src/views/: balance.rs
travel-rs-derive/: Cargo.toml
travel-rs-derive/src/: lib.rs
