[package]
name = "travel-rs"
version = "0.2.2"
authors = ["Michele Medori <princeofborgo@hotmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4.27"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
rust_decimal = "1.37.1"
surrealdb = { version = "2.3.3", features = ["kv-mem"] }
config = "0.15.11"
anyhow = "1.0.98"
serde = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "local-time",
    "env-filter",
] }
macro_rules_attribute = "0.2.2"
regex = "1.11.1"
strum = { version = "0.27.1", features = ["derive"] }
rust-fuzzy-search = "0.1.1"
travel-rs-derive = { version = "0.1.0", path = "travel-rs-derive" }
fluent = "0.16.1"
unic-langid = { version = "0.9.6", features = ["serde"] }
fluent-templates = "0.13.0"
maplit = "1.0.2"
rusty-money = { version = "0.4.1", features = ["iso", "crypto"] }
clap = { version = "4.5.39", features = ["derive"] }
tracing-appender = "0.2.3"

[dev-dependencies]
teloxide_tests = "0.3.0"
rand = "0.9.1"

[build-dependencies]
