[package]
name = "travel-rs"
version = "0.2.3"
authors = ["Michele Medori <princeofborgo@hotmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
fluent = "0.16.1"
fluent-datetime = "0.1.0"
fluent-templates = "0.13.0"
icu_calendar = "1.5.2"
indoc = "2.0.6"
log = "0.4.27"
macro_rules_attribute = "0.2.2"
maplit = "1.0.2"
regex = "1.11.1"
rust_decimal = "1.37.1"
rust-fuzzy-search = "0.1.1"
rusty-money = { version = "0.4.1", features = ["iso", "crypto"] }
serde = "1.0.219"
strum = { version = "0.27.1", features = ["derive"] }
surrealdb = { version = "2.3.5", features = ["kv-mem"] }
teloxide = { version = "0.15.0", features = ["macros"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = [
    "local-time",
    "env-filter",
] }
travel-rs-derive = { version = "0.1.0", path = "travel-rs-derive" }
unic-langid = { version = "0.9.6", features = ["serde"] }

[dev-dependencies]
rand = "0.9.1"
teloxide_tests = "0.3.0"

[build-dependencies]
