[package]
name = "travel-rs"
version = "0.2.5-SNAPSHOT"
authors = ["Michele Medori <michele.medori93@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
config = "0.15.22"
fluent = "=0.16.1" # dependi: disable-check
fluent-datetime = "=0.1.0" # dependi: disable-check
fluent-templates = "=0.13.0" # dependi: disable-check
icu_calendar = "=1.5.2" # dependi: disable-check
indoc = "2.0.7"
log = "0.4.29"
macro_rules_attribute = "0.2.2"
maplit = "1.0.2"
regex = "1.12.3"
rust_decimal = "1.41.0"
rust-fuzzy-search = "0.1.1"
rusty-money = { version = "0.5.0", features = ["iso", "crypto"] }
serde = "1.0.228"
strum = { version = "0.28.0", features = ["derive"] }
surrealdb = { version = "2.3.5", features = ["kv-mem"] }
teloxide = { version = "0.17.0", features = ["macros"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = [
    "local-time",
    "env-filter",
] }
travel-rs-derive = { version = "0.1.0", path = "travel-rs-derive" }
unic-langid = { version = "0.9.6", features = ["serde"] }

[dev-dependencies]
rand = "0.10.0"
teloxide_tests = "0.4.0"

[build-dependencies]
